# gfx

./: CMakeLists.txt
Examples/: CMakeLists.txt  simple.cpp
Include/: CMakeLists.txt
Include/sj/: CMakeLists.txt  gfx.h
Include/sj/gfx/: CMakeLists.txt  gfx_DeviceInfo.h  gfx_DeviceTemplate.h  gfx_Queue.h  gfx_QueueCapability.h  gfx_QueueInfo.h
Include/sj/gfx/detail/: CMakeLists.txt  gfx_DeviceConcept.h  gfx_QueueConcept.h
Include/sj/gfx/gl/: CMakeLists.txt  gfx_DeviceGl.h
Include/sj/gfx/vk/: CMakeLists.txt  gfx_DeviceVk.h  gfx_QueueVk.h
Sources/Libraries/gfx/: CMakeLists.txt  gfx.cpp  gfx_DeviceInfo.cpp  gfx_QueueInfo.cpp
Sources/Libraries/gfx/gl/: CMakeLists.txt  gfx_DeviceGl.cpp
Sources/Libraries/gfx/vk/: CMakeLists.txt  gfx_DeviceVk.cpp  gfx_QueueVk.cpp
